# mrt2-accompany

./: .gitignore  CMakeLists.txt  PATCHES.md  README.md
cmake/: MagentaDeps.cmake
patches/: magenta-encoder-28s.patch  magenta-musiccoca-thread-join.patch
scripts/: apply-magenta-patch.sh  entitlements.plist  release.sh
src/: AccompanyRunner.cpp  AccompanyRunner.h  AssetManager.h  AssetManager.mm  AudioRing.h  HostGridClock.cpp  HostGridClock.h  KeyChordAnalyzer.cpp  KeyChordAnalyzer.h  LoopCapture.cpp  LoopCapture.h  Mrt2ControlMapper.cpp  Mrt2ControlMapper.h  MrtLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tests/: test_analyzer.cpp  test_grid.cpp  test_mapper.cpp
tools/: analyze_run.py  diag_regress.cpp  diag_runner.cpp  m0_smoke.cpp  m1_prefill.cpp  m2_analyze.cpp  m3_condition.cpp  m5_drift.cpp  wav_io.h
